Inicio das Media-querys

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viva +</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media-query.css">
 </head>
 <body>
     <div class="figure">
@@ -23,6 +24,20 @@
             </nav>
         </header>
     </div>
+    <header class="header-mobile">
+        <div class="conteudo">
+            <hgroup>
+                <h1>Viva +</h1>
+            </hgroup>
+            <nav>
+                <ul>
+                    <li><a href="#introducao">Introdução</a></li>
+                    <li><a href="#bons-habitos">Bons Hábitos</a></li>
+                    <li><a href="#maus-habitos">Maus Hábitos</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div class="all" id="all">
         <article class="article">
             <main class="conteudo-article">
