--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     </div>
     <header class="header-mobile">
         <div class="conteudo">
+            <div class="img">
+                <!--A imagem vai no css-->
+            </div>
             <hgroup>
                 <h1>Viva +</h1>
             </hgroup>
