--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <div class="corpo-footer">
                 <ul>
                     <li>Feito Por: Desconhecido</li>
-                    <li><a href="">Calculadora de Calorias</a></li>
+                    <li><a href="calculadora_calorias/calculadora.html">Calculadora de Calorias</a></li>
                 </ul>
             </div>
         </footer>
