--- a/calculadora_calorias/calculadora.html
+++ b/calculadora_calorias/calculadora.html
@@ -9,7 +9,47 @@
     <link rel="stylesheet" href="css/media-query.css">
 </head>
 <body>
-    
+    <div class="all">
+        <div class="nav">
+            <ul>
+                <li><a href="../index.html">Página Inicial</a></li>
+                <li><a href="/calculadora_calorias/cookies/html/login.html">Login</a></li>
+                <li><a href="#">Registrar-se</a></li>
+            </ul>
+        </div>
+        <div class="listas">
+            <div class="calculadora">
+                <div class="left">
+                    <ul>
+                        <div class="inputs">
+                            <input type="radio" name="inputs" id="arroz first" class="input" checked>
+                            <input type="radio" name="inputs" id="feijao" class="input">
+                            <input type="radio" name="inputs" id="macarrao" class="input">
+                            <input type="radio" name="inputs" id="lentilha" class="input">
+                            <input type="radio" name="inputs" id="carne-de-frango" class="input">
+                            <input type="radio" name="inputs" id="carne-de-porco" class="input">
+                            <input type="radio" name="inputs" id="carne-de-gado" class="input">
+                        </div>
+                        <li><h3><label for="arroz first" class="labels">Arroz</label></h3></li>
+                        <li><h3><label for="feijao" class="labels">Feijão</label></h3></li>
+                        <li><h3><label for="macarrao" class="labels">Macarrão</label></h3></li>
+                        <li><h3><label for="lentilha" class="labels">Lentilha</label></h3></li>
+                        <li><h3><label for="carne-de-frango" class="labels">Carde de Frango</label></h3></li>
+                        <li><h3><label for="carne-de-porco" class="labels">Carde de Porco</label></h3></li>
+                        <li><h3><label for="carne-de-gado" class="labels">Carne de Gado</label></h3></li>
+                    </ul>
+                </div>
+                <div class="right">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="javascript/cookies.js"></script>
     <script src="javascript/script.js"></script>
 </body>
